--- a/i3/config
+++ b/i3/config
@@ -13,6 +13,7 @@ set $mod Mod4
 
 exec xinput set-prop "Elan Touchpad" "libinput Tapping Enabled" 1
 exec_always feh --bg-scale ~/dotfiles/bg.png
+exec --no-startup-id dunst
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -35,7 +36,8 @@ font pango:Iosevka 9
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal 
+exec xrdb ~/dotfiles/.Xresources
+bindsym $mod+Return exec kitty 
 
 # Pulse Audio controls
 #alsa_output.pci-0000_00_1f.3-platform-skl_hda_dsp_generic.HiFi__hw_sofhdadsp__sink
@@ -168,12 +170,6 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-        status_command i3status
-}
-
 bindsym Mod1+F1 exec "~/bin/hhkb-i3"
 bindsym $mod+Shift+h exec "~/.screenlayout/home-setup.sh"
 bindsym $mod+Shift+p exec "~/.screenlayout/portable-setup.sh"
@@ -187,3 +183,45 @@ focus_follows_mouse no
 
 hide_edge_borders both
 
+#######
+#THEME#
+#######
+
+# set primary gruvbox colorscheme colors
+set $bg #282828
+set $red #cc241d
+set $green #98971a
+set $yellow #ffffff
+set $white #ffffff
+set $blue #458588
+set $purple #b16286
+set $aqua #689d68
+set $gray #a89984
+set $darkgray #1d2021
+
+#start of bar section
+bar {
+    status_command i3status
+    colors {
+        # bar background color
+        background $bg
+        # text color used for blocks that do not have a color specified.
+        statusline $yellow
+        # workspaces section            
+        #                    border  backgr. text
+        focused_workspace    $aqua $aqua $darkgray
+        inactive_workspace   $darkgray $darkgray $yellow
+        active_workspace     $darkgray $darkgray $yellow
+        urgent_workspace     $red $red $bg
+    }
+}
+#end of bar section
+
+#start of window title bars & borders section
+
+# green gruvbox
+# class                 border|backgr|text|indicator|child_border
+client.focused_inactive $darkgray $darkgray $yellow $purple $darkgray
+client.urgent           $red $red $white $red $red
+client.focused          $aqua $aqua $darkgray $purple $darkgray
+client.unfocused          $darkgray $darkgray $gray $aqua $darkgray  
