--- a/i3/config
+++ b/i3/config
@@ -57,8 +57,6 @@ bindsym $mod+Print exec maim -s | xclip -selection clipboard -t image/png
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -198,6 +196,9 @@ set $purple #b16286
 set $aqua #689d68
 set $gray #a89984
 set $darkgray #1d2021
+
+# start dmenu (a program launcher)
+bindsym $mod+d exec dmenu_run -nb '#222222' -sf '#eeeeee' -sb '#689d68' -nf '#a89984'
 
 #start of bar section
 bar {
