--- a/i3/config
+++ b/i3/config
@@ -207,7 +207,7 @@ bar {
         # bar background color
         background $bg
         # text color used for blocks that do not have a color specified.
-        statusline $yellow
+        statusline #ded6ca
         # workspaces section            
         #                    border  backgr. text
         focused_workspace    $aqua $aqua $darkgray
