add auto complete on zsh

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,6 +1,8 @@
 # Based on https://github.com/morhetz/gruvbox by morhetz <morhetz@gmail.com>
 # Adapted to kitty by wdomitrz <witekdomitrz@gmail.com>
 
+shell_integration no-rc enabled
+confirm_os_window_close 0
 font_size 22.0
 cursor                  #928374
 cursor_text_color       background
