--- a/i3/config
+++ b/i3/config
@@ -15,6 +15,8 @@ exec xinput set-prop "Elan Touchpad" "libinput Tapping Enabled" 1
 exec_always feh --bg-scale ~/dotfiles/bg.png
 exec --no-startup-id dunst
 
+exec --no-startup-id picom -D 0
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 # font pango:monospace 8
