--- a/.i3status.conf
+++ b/.i3status.conf
@@ -22,7 +22,7 @@ order += "tztime local"
 volume master {
         format = "Volume: %volume"
         format_muted = "Muted"
-        device = "pulse:alsa_output.pci-0000_00_1f.3-platform-skl_hda_dsp_generic.HiFi__hw_sofhdadsp__sink"
+        device = "default"
 }
 
 cpu_temperature 0 {
