--- a/picom.conf
+++ b/picom.conf
@@ -60,96 +60,6 @@ use-damage = false;
 # Enabled client-side shadows on windows.
 shadow = false;
 
-
-# The blur radius for shadows. (default 12)
-shadow-radius = 35;
-# The left offset for shadows. (default -15)
-shadow-offset-x = -35;
-# The top offset for shadows. (default -15)
-shadow-offset-y = -35;
-# The translucency for shadows. (default .75)
-shadow-opacity = 0.8;
-
-# Set if you want different colour shadows
-# shadow-red = 0.0;
-# shadow-green = 0.0;
-# shadow-blue = 0.0;
-
-
-
-# shadow-exclude-reg = "x10+0+0";
-# xinerama-shadow-crop = true;
-
-
-# The shadow exclude options are helpful if you have shadows enabled. Due to the way compton draws its shadows, certain applications will have visual glitches
-# (most applications are fine, only apps that do weird things with xshapes or argb are affected).
-# This list includes all the affected apps I found in my testing. The "! name~=''" part excludes
-# shadows on any "Unknown" windows, this prevents a visual glitch with the XFWM alt tab switcher.
-
-# shadow-exclude = "n:e:Notification";
-
-shadow-exclude = [
-	# Removed to avoid no-shadow in modal dialog windows.
-	# "! name~=''",
-    "name = 'Notification'",
-    "name = 'Plank'",
-    "name = 'Docky'",
-    "name = 'Kupfer'",
-	"name = 'Pensela'",
-	"name = 'Drawing Board'",
-	#
-	# Workaround for VirtualBox empty window at launching
-	"name = 'VirtualBox'",
-	"name = 'VirtualBoxVM'",
-	#
-	# Avoid shadow in Negatron popups
-	"name = 'Negatron v0.100.1' && argb",
-	#
-	# Avoid shadow for the XFCE alt tab TaskSwitcher
-    "name ?= 'xfwm4' && argb",
-	#
-    # "name *= 'compton'",
-    "class_g = 'Conky'",
-    "class_g = 'Kupfer'",
-    "class_g = 'Synapse'",
-    "class_g ?= 'Notify-osd'",
-    "class_g ?= 'Cairo-dock'",
-	"class_g = 'Cairo-clock'",
-    "class_g ?= 'Xfce4-notifyd'",
-	#
-	# Exclude special Firefox/Firefox-esr/Thunderbird dropdowns.
-  	# Ref: https://github.com/chjj/compton/issues/247
-	 "class_g = 'Thunderbird' && argb",
-	 "class_g = 'Telegram' && argb",
-	 "name ?= 'Thunderbird' && (window_type = 'utility' || window_type = 'popup_menu')",
-	#
-	# Exclude some special popup menu shadows, but Modal Windows.
-	# These are more finetuning thant previous ones:
-	"class_g ?= 'Thunderbird' && class_i = 'Popup' && argb",
-	"class_g = 'firefox' && (window_type = 'utility' || window_type = 'popup_menu') && argb",
-	"class_g = 'Firefox' && (window_type = 'utility' || window_type = 'popup_menu') && argb",
-	"class_g = 'firefox-esr' && (window_type = 'utility' || window_type = 'popup_menu') && argb",
-	"class_g = 'Firefox-esr' && (window_type = 'utility' || window_type = 'popup_menu') && argb",
-	"class_g = 'Tor Browser' && (window_type = 'utility') && argb",
-	"class_g = 'Navegador Tor' && (window_type = 'utility' || window_type = 'popup_menu') && argb",
-	"class_g = 'Thunderbird' && (window_type = 'utility' || window_type = 'popup_menu') && argb",
-	"class_g = 'Mozilla Thunderbird' && (window_type = 'utility' || window_type = 'popup_menu') && argb",
-    "class_g ?= 'Xfce4-power-manager'",
-	# 
-	# Exclude Vokoscreen and VokoscreenNG area selector
-	#
-	"class_g ?= 'vokoscreen' && argb",
-	"name = 'Área'",
-	"name *= 'Cuenta regresiva'",
-#	"override_redirect = true"
-];
-# Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
-#  Deprecated, use --shadow-exclude 'bounding_shaped' or --shadow-exclude 'bounding_shaped && !rounded_corners' instead.
-shadow-ignore-shaped = false;
-
-
-
-
 #################################
 #
 # Opacity
@@ -178,41 +88,7 @@ inactive-opacity-override = false;
 
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
 
-blur-background = true;
-
-
-blur-method = "kernel";
-#blur-size = 50;
-#blur-deviation = 5.0;
-
-
-
-# Blur background of opaque windows with transparent frames as well.
-# blur-background-frame = true;
-# Do not let blur radius adjust based on window opacity.
-#blur-background-fixed = true;
-
-# blur-kern = "3x3box";
-# blur-kern = "5x5box";
-# blur-kern = "5x5gaussian"
-blur-kern = "9x9gaussian"
-
-blur-background-exclude = [
-    "class_g = 'Peek'",
-	"class_g = 'Pensela'",
-	"name = 'Drawing Board'",
-    "window_type = 'dock'",
-	"window_type = 'dropdown_menu'",
-	"window_type = 'combo'",
-	"window_type = 'popup_menu'",
-	"window_type = 'utility'",
-    "window_type = 'desktop'",
-];
-opacity-exclude = [
-    "name = 'Stratagus'"
-];
-
-
+blur-background = false;
 #################################
 #
 # Fading
